--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "android": "react-native run-android"
   },
   "dependencies": {
+    "lodash": "^4.17.11",
     "native-base": "^2.12.1",
     "react": "16.8.3",
     "react-native": "0.59.5",
